--- a/CSS/style.css
+++ b/CSS/style.css
@@ -174,12 +174,12 @@ input[type="checkbox"] {
   position: fixed;
   height: 50px;
   width: 100%;
-  z-index: 1;
+  z-index: 2;
   background-color: #00ad6e;
   justify-content: space-around;
   align-items: center;
 }
-.portada {
+.portada{
   margin-top: 50px;
 }
 .header_img {
@@ -494,7 +494,7 @@ textarea {
   display: flex;
   width: calc(100% - 40px);
   height: 40px;
-  margin: 20px;
+  margin: 75px 20px 20px 20px;
   text-overflow: ellipsis;
   font-size: 18px;
 }
@@ -505,7 +505,7 @@ textarea {
 }
 #lupa {
   position: absolute;
-  top: 21px;
+  top: 76px;
   left: calc(100% - 80px);
   right: 0;
 }
@@ -641,6 +641,9 @@ textarea {
 #ventajas h1,
 #ventajas h2 {
   margin: 16px;
+}
+#ventajas h1{
+  margin-top:65px
 }
 #ventajas h2 {
   justify-content: center;
@@ -1275,6 +1278,9 @@ textarea {
     margin: 20px 0;
     width: 100%;
   }
+  #lupa {
+    top: 21px;
+  }
   .oferta3 {
     display: flex;
   }
@@ -1360,6 +1366,9 @@ textarea {
   }
   /* SOCIOS */
   /* DATOS PERSONALES, DISPONIBILIDAD, DATOS DE CONTACTO */
+#ventajas h1{
+  margin-top:20px
+}
   .desktop_3_form {
     display: flex;
     height: 450px;
